--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "react-hook-form": "^7.27.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-router": "^6.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
     "react16": "npm:react@^16.14.0",
     "reacticonsold": "npm:react-icons@^2.2.5",
     "redux": "^4.1.2",
@@ -62,7 +63,6 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
-    "nodemon": "^1.19.4"
+    "nodemon": "^2.0.15"
   }
-
 }
