--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
-    "@mui/material": "^5.4.1",
+    "@mui/material": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -33,6 +33,7 @@
     "redux-thunk": "^2.4.1",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
+    "styled-components": "^5.3.3",
     "uuid": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
